--- a/style.css
+++ b/style.css
@@ -3106,7 +3106,7 @@ display: none;
 }
 
 .bck-box.bck-box-33:before {
-    background-image: url(images/icono_caja_32.png);
+    background-image: url(images/icono_caja_32a.png);
     content: " ";
     position: absolute;
     left: -120px;
