--- a/style.css
+++ b/style.css
@@ -5368,6 +5368,54 @@ td,th {
         left: 0
     }
 
+    .bck-title-2 {
+        margin-left: 0px;
+    }
+
+    .bck-title-7 {
+        margin-left: 0px;
+    }
+
+    .bck-title-9 {
+        margin-left: 0px;
+    }
+
+    .bck-title-11 {
+        margin-left: 0px;
+    }
+
+    .bck-title-13 {
+        margin-left: 0px;
+    }
+
+    .bck-title-15 {
+        margin-left: 0px;
+    }
+
+    .bck-title-17 {
+        margin-left: 0px;
+    }
+
+    .bck-title-19 {
+        margin-left: 0px;
+    }
+
+    .bck-title-21 {
+        margin-left: 0px;
+    }
+
+    .bck-title-23 {
+        margin-left: 0px;
+    }
+
+    .bck-title-25 {
+        margin-left: 0px;
+    }
+
+    .bck-title-27 {
+        margin-left: 0px;
+    }
+
 
     }
 
